tests/sema/bad/23_use_before_decl.sg
fn main() {
  let y:int = x;
  let x:int = 1;
}
